# MES_Final_Project

./: .gitignore  CMakeLists.txt  README.md  main.c  relay.c  relay.h  ws2812.c
Documents/: EEPROM Map.xlsx  RFID_Unlocker_Report.md  open_close_power
Source/: Adxl343.c  Adxl343.h  CAT24C32.c  CAT24C32.h  MFRC522.c  MFRC522.cpp  MFRC522.h  MFRC522_RP2040.c  MFRC522_RP2040.cpp  MFRC522_RP2040.h  Neopixel.c  Neopixel.h  consoleCommands.c  main.c  main.cpp  main.h  relay.c  relay.h  userFuncs.c  userFuncs.h
